--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,6 +13,7 @@
     %link{href: "style.css", rel: "stylesheet"}/
     %title chat-app
   %body
+    = render 'layouts/notifications'
     = yield
 
 
