--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -1,40 +1,27 @@
 .main-chat
   .main-chat__group-info
     .main-chat__group-info__leftbox
-      .main-chat__group-info__leftbox__name
-        test グループ
-      .main-chat__group-info__leftbox__menberlist
-        Menber : masa
+      .main-chat__group-info__leftbox__current-group
+        = @group.name
+        .main-chat__group-info__leftbox__name
+          Member:
+          - @group.users.each do |user|
+            = user.name
     .main-chat__group-info__edit
-      = link_to "#",class: "main-chat__group-info-edit" do
+      = link_to edit_group_path(@group),class: "main-chat__group-info-edit" do
         Edit
   .main-chat__message-list
-    .message-list__info
-      .message-list__info__name
-        masa
-      .message-list__info__time
-        2020/03/09(Mon)20:18:53
-    .message-list__text
-      暑い
-    .message-list__info
-      .message-list__info__name
-        masa
-      .message-list__info__time
-        2020/03/09(Mon)20:18:53
-    .message-list__text
-      暑い
+    = render @messages
   .main-chat_form
-    .form-new_message
-      .new_message-input-box
-        .input-box-text
-          type a message
-        .input-box-image
-          .image-gazo
-            %label{class: "image-gazo"}
-              = icon('fas','image')
-              %input{type: "file"}
-      .form-new_message-btn
-        Send
-
-          
-        
+    = form_for [@group, @message] do |f|
+      .form-new_message
+        .new_message-input-box
+          .input-box-text
+            = f.text_field :content, class: 'form-new_message', placeholder: 'type a message'
+          .input-box-image
+            .image-gazo
+              = f.label :image, class: 'image-gazo' do
+                = icon('fas','image', class: 'icon')
+                = f.file_field :image, class: 'hidden'
+        .form-new_message-btn
+          = f.submit 'Send', class: 'form__submit'
