--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,21 +1,13 @@
 !!!
 %html
   %head
-    %meta{content: "text/html; charset=UTF-8", "http-equiv": "Content-Type"}/
-    %title ChatSpace
-    = stylesheet_link_tag    'application', media: 'all', data: { turbolinks: {track: true}}
-    = javascript_include_tag 'application', data: { turbolinks: {track: true}}
+    %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
+    %title ChatSpaceSample
     = csrf_meta_tags
-    %meta{charset: "UTF-8"}/
-    %meta{content: "width=device-width, initial-scale=1.0", name: "viewport"}/
-    %meta{content: "ie=edge", "http-equiv": "X-UA-Compatible"}/
-    %link{href: "reset.css", rel: "stylesheet"}/
-    %link{href: "style.css", rel: "stylesheet"}/
-    %title chat-app
+    -# = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' ← このオプションを消す
+    -# = javascript_include_tag 'application', 'data-turbolinks-track': 'reload' ← このオプションを消す
+    = stylesheet_link_tag    'application', media: 'all'
+    = javascript_include_tag 'application'
   %body
-    = render 'layouts/notifications'
+    = render "layouts/notifications"
     = yield
-
-
-
-
