--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,25 +1,12 @@
 .message
-  .upper-message
-    .upper-message__user-name
-      = message.user.name
-    .upper-message__date
-      = message.created_at.strftime("%Y年%m月%d日 %H時%M分")
-  .lower-message
-    - if message.content.present?
-      %p.lower-message__content
-        = message.content
-    = image_tag message.image.url, class: 'lower-message__image' if message.image.present?
-
-    -# message-list__info__name
-    -#     masa
-    -#   .message-list__info__time
-    -#     2020/03/09(Mon)20:18:53
-    -# .message-list__text
-    -#   暑い
-    -# .message-list__info
-    -#   .message-list__info__name
-    -#     masa
-    -#   .message-list__info__time
-    -#     2020/03/09(Mon)20:18:53
-    -# .message-list__text
-    -#   暑い
+  .message{data: {message: {id: message.id}}}
+    .upper-message
+      .upper-message__user-name
+        = message.user.name
+      .upper-message__date
+        = message.created_at.strftime("%Y年%m月%d日 %H時%M分")
+    .lower-message
+      - if message.content.present?
+        %p.lower-message__content
+          = message.content
+      = image_tag message.image.url, class: 'lower-message__image' if message.image.present?
